# unrager

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.sh  justfile
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-site.yml  publish-crate.sh  query-ids-watch.yml  release.yml
crates/unrager-app/: Cargo.toml  Dioxus.toml
crates/unrager-app/assets/: style.css
crates/unrager-app/src/: main.rs  observer.rs  routes.rs  state.rs  style.rs
crates/unrager-app/src/api/: client.rs  mod.rs  sse.rs
crates/unrager-app/src/components/: avatar.rs  command_palette.rs  compose_sheet.rs  error_banner.rs  help_overlay.rs  icons.rs  markdown.rs  media_block.rs  mod.rs  more_menu.rs  rich_text.rs  streaming_pane.rs  thread_view.rs  toast.rs  tweet_card.rs
crates/unrager-app/src/pages/: compose.rs  home.rs  layout.rs  likers.rs  mod.rs  not_found.rs  profile.rs  settings.rs  source.rs  tweet.rs
crates/unrager-app/static/: manifest.webmanifest  register-sw.js  sw.js
crates/unrager-model/: Cargo.toml
crates/unrager-model/src/: lib.rs  source.rs  tweet.rs  wire.rs
demos/: README.md  command.tape  detail.tape  expand.tape  filter.tape  help.tape  hero-demo.tape  hero-filter.tape  hero.tape  home.tape  overview.tape  shot-ask.tape  shot-command.tape  shot-compose.tape  shot-detail.tape  shot-help.tape  shot-home.tape  shot-notifs.tape  shot-profile.tape  shot-search.tape
examples/: check_query_ids.rs  upload_test.rs
site/functions/: _middleware.js
site/functions/_lib/: installs.js
site/functions/api/: badge.js  downloads.js
site/og/: render.py  template.html
site/public/: _headers  _redirects  _routes.json  index.html  style.css
src/: config.rs  error.rs  flag.rs  lib.rs  main.rs  model.rs  update.rs  util.rs
src/api/: client.rs  media.rs  mod.rs
src/auth/: chromium.rs  linux.rs  macos.rs  mod.rs  oauth.rs
src/cli/: auth.rs  bookmarks.rs  common.rs  demo.rs  doctor.rs  home.rs  mentions.rs  mod.rs  notifs.rs  read.rs  reply.rs  search.rs  serve.rs  snapshot.rs  thread.rs  tweet.rs  update.rs  user.rs  whoami.rs
src/gql/: client.rs  endpoints.rs  mod.rs  query_ids.rs  scraper.rs  transaction.rs
src/parse/: about.rs  mod.rs  notification.rs  timeline.rs  tweet.rs  user.rs  viewer.rs
src/render/: mod.rs  pretty.rs
src/server/: embed.rs  error.rs  llm.rs  mod.rs  sse.rs  state.rs
src/server/routes/: compose.rs  config.rs  engage.rs  health.rs  media.rs  mod.rs  profile.rs  seen.rs  session.rs  timeline.rs  tweet.rs  whoami.rs
src/tui/: about_fetch.rs  about_store.rs  app.rs  app_fetch.rs  app_keys.rs  app_llm.rs  app_nav.rs  app_screenshot.rs  ask.rs  background.rs  brief.rs  clock.rs  command.rs  compose.rs  demo.rs  editor.rs  engage.rs  event.rs  external.rs  filter.rs  filter_default.toml  flag_cache.rs  focus.rs  media.rs  mod.rs  screenshot.rs  seen.rs  session.rs  snapshot.rs  songlink.rs  sound.rs  source.rs  test_util.rs  theme.rs  ui.rs  whisper.rs  youtube.rs
