[package]
name = "unrager"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A calm Twitter/X CLI with a local-LLM rage filter"
license = "MIT"
repository = "https://github.com/guitaripod/unrager"
readme = "README.md"
keywords = ["twitter", "x", "cli", "llm", "filter"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = { version = "0.12", default-features = false }
hmac = "0.12"
sha1 = "0.10"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
directories = "5"
toml = "0.8"
url = "2"
oauth2 = "5"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
