[package]
name = "unrager"
version = "0.8.9"
edition = "2024"
rust-version = "1.85"
description = "A calm Twitter/X CLI with a local-LLM rage filter"
license = "GPL-3.0-only"
repository = "https://github.com/guitaripod/unrager"
readme = "README.md"
keywords = ["twitter", "x", "cli", "llm", "filter"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "signal", "sync", "time"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = { version = "0.12", default-features = false }
hmac = "0.12"
sha1 = "0.10"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
directories = "5"
toml = "0.8"
url = "2"
tempfile = "3"
regex = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
urlencoding = "2"
mime_guess = "2"
unicode-width = "0.2"
termbg = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
