[workspace]
members = [".", "crates/unrager-model", "crates/unrager-app"]
resolver = "2"

[workspace.package]
version = "0.14.2"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/guitaripod/unrager"

[package]
name = "unrager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A calm Twitter/X CLI with a local-LLM rage filter"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["twitter", "x", "cli", "llm", "filter"]
categories = ["command-line-utilities"]
include = [
    "src/**/*",
    "assets/NotoSansMono-*.ttf",
    "assets/for-you-bg.png",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "crates/unrager-app/dist/**",
]

[features]
default = ["tui"]
# Classic terminal UI (ratatui). Disable for a CLI-only install.
tui = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:termbg",
    "dep:sys-locale",
    "dep:image",
    "dep:unicode-width",
    "dep:ab_glyph",
    "dep:arboard",
]
# HTTP server + embedded web/mobile client. Pulls in axum and the WASM bundle.
# Implies `tui` because the server reuses filter/seen/fetch helpers that live there.
server = [
    "tui",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:rust-embed",
    "dep:async-stream",
    "dep:eventsource-stream",
    "dep:fs2",
]

[dependencies]
unrager-model = { path = "crates/unrager-model", version = "0.14.2" }
clap = { version = "4", features = ["derive", "wrap_help"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "signal", "sync", "time"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = { version = "0.12", default-features = false }
hmac = "0.12"
sha1 = "0.10"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
directories = "5"
toml = "0.8"
url = "2"
tempfile = "3"
regex = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
urlencoding = "2"
mime_guess = "2"
self-replace = "1"
flate2 = "1"
tar = "0.4"
libc = "0.2"

# --- TUI (optional, default) ---
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
termbg = { version = "0.5", optional = true }
sys-locale = { version = "0.3.2", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"], optional = true }
unicode-width = { version = "0.2", optional = true }
ab_glyph = { version = "0.2", optional = true }
arboard = { version = "3", default-features = false, features = ["image-data", "wayland-data-control"], optional = true }

# --- Server + embedded web bundle (optional, default) ---
axum = { version = "0.8", features = ["multipart", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "compression-full", "trace", "fs"], optional = true }
rust-embed = { version = "8", features = ["compression"], optional = true }
async-stream = { version = "0.3", optional = true }
eventsource-stream = { version = "0.2", optional = true }
fs2 = { version = "0.4", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
